# fsoft2025_1DC_4

./: .gitignore  CMakeLists.txt  main.cpp
Project/: Utils.cpp  Utils.h
Project/headers/Controller/: Controller.h
Project/headers/Exceptions/: DataConsistencyException.h  DuplicatedDataException.h  InvalidDataException.h
Project/headers/model/: Administrator.h  AdministratorContainer.h  App.h  Contact.h  ContactContainer.h  GroupChat.h  GroupChatContainer.h  InteractionHistory.h  InteractionHistoryContainer.h  Message.h  MessageContainer.h  Notification.h  NotificationContainer.h
Project/headers/view/: AdminView.h  ChatSettingsView.h  ChatView.h  ChatsView.h  ContactView.h  ContactsView.h  GroupChatSettingsView.h  GroupChatView.h  GroupChatsView.h  InteractionsView.h  MainView.h  MessageView.h  NotificationsView.h  Utils.h  View.h
Project/sources/: App.cpp  Contact.cpp  Group.cpp  GroupChat.cpp  InteractionHistory.cpp  MessageContainer.cpp  Notification.cpp  NotificationContainer.cpp  Utils.cpp  Utils.h
Project/sources/Exceptions/: DataConsistencyException.cpp  DuplicatedDataException.cpp  InvalidDataException.cpp
Project/sources/controller/: Controller.cpp
Project/sources/model/: Administrator.cpp  AdministratorContainer.cpp  App.cpp  ContactContainer.cpp  GroupChat.cpp  InteractionHistoryContainer.cpp  Message.cpp  MessageContainer.cpp  NotificationContainer.cpp
Project/sources/views/: AdminView.cpp  ChatSettingsView.cpp  ChatView.cpp  ChatsView.cpp  ContactView.cpp  ContactsView.cpp  GroupChatSettingsView.cpp  GroupChatView.cpp  GroupChatsView.cpp  InteractionsView.cpp  MainView.cpp  MessageView.cpp  NotificationsView.cpp  Utils.cpp  View.cpp
